# Click-automation-tool

./: .gitignore  README.md  pyproject.toml  sampledatacreation.txt  sunflowerland_automation.py
common/: config.yaml  setting.yaml
common/base/: detection_strategy.py  detection_task.py  detector_base.py  non_threaded_detection.py  threaded_detection.py  tool_base.py
common/helper/: AreaSelector.py  BrowserManager.py  ContextAction.py  KeyboardContext.py  OverlayWindow.py  ScreenActions.py  browser.py  overlay.py  screen_action.py
common/impl/: template_matching_detector.py  text_detector.py  tool_manager.py  yolo_object_detector.py
common/utils/: ContextActionExecutor.py  PathResolver.py  Settings.py  context_action_executor.py  project_path.py  singleton.py
common/wrappers/: DetectionTask.py
core/: README.md  __init__.py
core/main/: main.py
createWebSampleData/: content.html  resource_server.py  style.css
misc/createYoloSampleData/: dom_injector.py  index.html  server.py
persistant/: AbstractToolDataStore.py  FileToolDataStore.py
persistant/data/: 123.json  test.json
presentation/: OverlayWindow.py  PresentationManager.py  README.md  ScreenActions.py  ToolEditorDialog.py  ToolMaker.py  __init__.py  configuration.yaml  jsoneditor.html  main.py
presentation/contextAction/: KeyboardContext.py  (+1 more)
shared/: __init__.py
tests/: test_context_action_executor.py  test_keyboard_context.py  test_template_detector.py  test_text_detector.py  test_text_detector_images.py
tools/: captcha_passer.py  harvestor.py  profile_manager.py  simple_clicker.py
(+62 files in other folders)
