[project]
name = "automation-tool"
version = "0.1.0"
description = "Automation tools."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
	{ name = "Your Name", email = "your.email@example.com" }
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
